# agentic-test-forge

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: consumer-ci.md  gherkin-authoring-for-agents.md  release-checklist.md
docs/adr/: 0001-package-boundaries-and-refactor-conventions.md  README.md
docs/domain/: CONTEXT.md
docs/refactor-analysis/: round-2-inventory.md
pilot/: .gitignore  README.md  behave.ini  pyproject.toml
pilot/features/steps/: calculator_steps.py
pilot/src/pilot_app/: calculator.py
pilot/tests/: test_calculator.py
scripts/: pilot-all.ps1  pilot-gherkin.ps1  pilot-mutmut-wsl.ps1  setup-wsl-pilot.ps1  sync-wsl-pilot.ps1
src/agentic_test_forge/: __init__.py  errors.py
src/agentic_test_forge/analysis/: __init__.py  crap.py  dry.py
src/agentic_test_forge/cli/: __init__.py  exit_codes.py  helpers.py  main.py
src/agentic_test_forge/config/: __init__.py  loader.py  models.py  parsers.py
src/agentic_test_forge/manifest/: __init__.py  partition.py  store.py
src/agentic_test_forge/mutation/: __init__.py
src/agentic_test_forge/mutation/code/: __init__.py  analyze.py  exit_codes.py  report.py  runner.py  scope.py
src/agentic_test_forge/mutation/gherkin/: __init__.py  analyze.py  constants.py  feature_editor.py  mutator.py  parser.py  report.py  runner.py  scope.py  scoring.py
src/agentic_test_forge/orchestration/: __init__.py  check.py  report.py
src/agentic_test_forge/reporting/: __init__.py  console.py  console_helpers.py  serialize.py  status.py  threshold.py
src/agentic_test_forge/scope/: __init__.py  git.py  paths.py
tests/: conftest.py  test_check_report.py  test_cli.py  test_cli_helpers.py  test_config.py  test_crap.py  test_dry.py  test_exit_codes.py  test_gherkin_analyze.py  test_gherkin_constants.py  test_gherkin_mutator.py  test_gherkin_parser.py  test_gherkin_report.py  test_gherkin_runner.py  test_gherkin_scope.py  test_manifest.py  test_mutation_analyze.py  test_mutation_report.py  test_mutation_runner.py  test_mutation_scope.py  test_mutmut_exit_codes.py  test_orchestration_check.py  test_pre_commit_hook.py  test_report_serialize.py  test_report_status.py  test_scope_git.py  test_scope_paths.py
tests/fixtures/crap_sample/src/: sample.py  uncovered.py
tests/fixtures/gherkin_sample/features/: sample.feature
tests/fixtures/pre_commit_fail/: pyproject.toml
tests/fixtures/pre_commit_fail/src/: sample.py
tests/fixtures/pre_commit_no_coverage/: pyproject.toml
tests/fixtures/pre_commit_no_coverage/src/: sample.py
tests/fixtures/pre_commit_pass/: pyproject.toml
tests/fixtures/pre_commit_pass/src/: sample.py
tests/fixtures/pre_commit_pass/tests/: test_sample.py
