[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-test-forge"
version = "1.0.0"
description = "Python quality workflow for agentic AI-driven development (CRAP, mutation, Gherkin gates)"
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0-or-later"
authors = [{ name = "cheezd" }]
keywords = ["testing", "quality", "mutation", "crap", "gherkin", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "coverage>=7.4",
    "mutmut>=3.0",
    "radon>=6.0",
    "rich>=13.7",
    "tomli-w>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.4",
    "mypy>=1.8",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
forge = "agentic_test_forge.cli.main:run"

[project.urls]
Homepage = "https://github.com/cheezd/agentic-test-forge"
Repository = "https://github.com/cheezd/agentic-test-forge"
Documentation = "https://github.com/cheezd/agentic-test-forge/blob/main/docs/consumer-ci.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_test_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
norecursedirs = ["fixtures", ".git", ".tox", "dist", "build"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["agentic_test_forge"]

[[tool.mypy.overrides]]
module = ["radon.*", "mutmut.*", "tomli_w.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["agentic_test_forge"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.forge]
paths = ["src/agentic_test_forge"]
crap_threshold = 30
crap_formula = "standard"
manifest_dir = ".forge"
mutation_threshold = 80
mutation_base_ref = "main"
mutation_test_cmd = "pytest"
gherkin_threshold = 80
gherkin_base_ref = "main"
gherkin_test_cmd = "behave"
gherkin_runner = "behave"
gherkin_paths = ["features"]

[tool.forge.gates]
crap = true
mutation = false
gherkin = false
dry = true
